# pandasv2

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_NOW.md  LICENSE  MANIFEST.in  README.md  README_MAHESH.md  START_HERE.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
pandas2/: __init__.py  converters.py  core.py  integrations.py
pandasv2/: __init__.py  accessors.py  advanced.py  analytics.py  api_types.py  arrays.py  converters.py  core.py  dataframe.py  excel_writer.py  groupby.py  integrations.py  io.py  offsets_ext.py  plotting.py  reshape.py  series.py  styling.py  testing.py  window.py
tests/: __init__.py  test_core.py  test_json_safe.py
