[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandasv2"
version = "1.0.0"
description = "Advanced Pandas for Web Applications - JSON serialization, DataFrame web integration, type-safe conversions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mahesh Makvana", email = "mahesh.makvana@example.com"}
]
keywords = [
    "pandas",
    "json",
    "serialization",
    "fastapi",
    "flask",
    "django",
    "dataframe",
    "web",
    "api",
    "data-science",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.70.0"]
flask = ["flask>=2.0.0"]
django = ["django>=3.2"]
dev = ["pytest>=6.0", "pytest-cov>=2.12.0"]

[project.urls]
Homepage = "https://github.com/maheshmakvana/pandasv2"
Source = "https://github.com/maheshmakvana/pandasv2"
Tracker = "https://github.com/maheshmakvana/pandasv2/issues"
Documentation = "https://github.com/maheshmakvana/pandasv2#readme"

[tool.setuptools]
packages = ["pandasv2", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
