[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandasv2"
version = "2.4.2"
description = "pandasv2: pandas drop-in replacement with memory optimization, nested JSON handling, parallel groupby, chunked processing, fast apply, unified apply/map API, safe merge validation, dtype optimization, DataFrame profiling, append compatibility for pandas 3.0, JSON serialization, diff tracking, column validation, streaming export, and seamless FastAPI/Flask/Django integration. Import as pandasv2"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mahesh Makvana", email = "maheshmakwana527@gmail.com"}
]
keywords = [
    "pandas",
    "pandasv2",
    "pandas2",
    "pandas drop-in",
    "pandas replacement",
    "pandas alternative",
    "pandas memory optimization",
    "reduce pandas memory",
    "pandas memory usage",
    "pandas memory efficient",
    "pandas large dataframe",
    "pandas chunked processing",
    "pandas out of memory",
    "pandas nested json",
    "pandas flatten json",
    "pandas explode nested",
    "pandas json normalize",
    "nested json to dataframe",
    "json serialization pandas",
    "pandas json",
    "dataframe json",
    "pandas to json",
    "int64 not json serializable pandas",
    "object of type int64 is not json serializable",
    "pandas not json serializable",
    "fastapi pandas",
    "flask pandas",
    "django pandas",
    "pandas web api",
    "pandas rest api",
    "pandas fast apply",
    "pandas parallel apply",
    "pandas vectorized apply",
    "pandas apply optimization",
    "pandas apply vs map",
    "pandas unified apply",
    "pandas applymap deprecated",
    "pandas parallel groupby",
    "pandas multiprocessing groupby",
    "pandas groupby parallel",
    "pandas groupby optimization",
    "pandas append removed",
    "pandas append alternative",
    "pandas 3.0 append",
    "pandas append deprecated",
    "dataframe append replacement",
    "pandas dtype optimization",
    "pandas auto categorical",
    "pandas optimize dtypes",
    "pandas downcast integer",
    "pandas downcast float",
    "pandas safe merge",
    "pandas merge validation",
    "pandas cardinality merge",
    "pandas merge check keys",
    "pandas copy on write",
    "pandas chained assignment error",
    "pandas 3.0 migration",
    "pandas 3.0 breaking changes",
    "dataframe pipeline",
    "dataframe diff",
    "dataframe cache",
    "dataframe validation",
    "dataframe profiling",
    "streaming dataframe",
    "data quality",
    "dataframe change detection",
    "pandas profiling",
    "pandas pipeline",
    "pandas validation",
    "pandas caching",
    "data analytics",
    "data science",
    "dataframe",
    "data manipulation",
    "data wrangling",
    "etl",
    "data transformation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.70.0"]
flask = ["flask>=2.0.0"]
django = ["django>=3.2"]
dev = ["pytest>=6.0", "pytest-cov>=2.12.0"]

[project.urls]
Homepage = "https://github.com/maheshmakvana/pandasv2"
Source = "https://github.com/maheshmakvana/pandasv2"
Tracker = "https://github.com/maheshmakvana/pandasv2/issues"
Documentation = "https://github.com/maheshmakvana/pandasv2#readme"

[tool.setuptools]
packages = ["pandasv2", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
